fixed code panel  <pre>  "white-spacing: nowrap" bug.

--- a/source/css/_partial/highlight.styl
+++ b/source/css/_partial/highlight.styl
@@ -1,17 +1,6 @@
 $highlight_theme = hexo-config("highlight_theme")
 
 $highlight-background   = #f7f7f7
-$highlight-current-line = #efefef
-$highlight-selection    = #d6d6d6
-$highlight-foreground   = #4d4d4c
-$highlight-comment      = #8e908c
-$highlight-red          = #c82829
-$highlight-orange       = #fb6d19
-$highlight-yellow       = #eab700
-$highlight-green        = #718c00
-$highlight-aqua         = #3e999f
-$highlight-blue         = #4271ae
-$highlight-purple       = #8959a8
 
 if $highlight_theme == "normal"
   $highlight-background   = #f7f7f7
@@ -246,3 +235,50 @@ pre
   .keyword
   .javascript .function
     color: $highlight-purple
+
+
+if $highlight_theme == "" {
+    pre {
+    color: #525252
+  }
+
+  pre .function .keyword,pre .constant {
+    color: #0092db
+  }
+
+  pre .keyword,pre .attribute {
+    color: #e96900
+  }
+
+  pre .number,pre .literal {
+    color: #ae81ff
+  }
+
+  pre .tag,pre .tag .title,pre .change,pre .winutils,pre .flow,pre .lisp .title,pre .clojure .built_in,pre .nginx .title,pre .tex .special {
+    color: #2973b7
+  }
+
+  pre .symbol,pre .symbol .string,pre .value,pre .regexp {
+    color: #42b983
+  }
+
+  pre .title {
+    color: #83B917
+  }
+
+  pre .tag .value,pre .string,pre .subst,pre .haskell .type,pre .preprocessor,pre .ruby .class .parent,pre .built_in,pre .sql .aggregate,pre .django .template_tag,pre .django .variable,pre .smalltalk .class,pre .javadoc,pre .django .filter .argument,pre .smalltalk .localvars,pre .smalltalk .array,pre .attr_selector,pre .pseudo,pre .addition,pre .stream,pre .envvar,pre .apache .tag,pre .apache .cbracket,pre .tex .command,pre .prompt {
+    color: #42b983
+  }
+
+  pre .comment,pre .java .annotation,pre .python .decorator,pre .template_comment,pre .pi,pre .doctype,pre .shebang,pre .apache .sqbracket,pre .tex .formula {
+    color: #b3b3b3
+  }
+
+  pre .deletion {
+    color: #BA4545
+  }
+
+  pre .coffeescript .javascript,pre .javascript .xml,pre .tex .formula,pre .xml .javascript,pre .xml .vbscript,pre .xml .css,pre .xml .cdata {
+    opacity: 0.5
+  }
+}
